--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ body
 {
     height: 100vh;
     font-family: 'Poppins';
+    background: rgb(24, 24, 24);
 }
 
 .webgl
@@ -17,4 +18,5 @@ body
     top: 0;
     left: 0;
     outline: none;
+    /* mix-blend-mode: exclusion; */
 }
